[gd_scene load_steps=8 format=3 uid="uid://dxdu8vgamdjrr"]

[ext_resource type="Script" path="res://scenes/player/spells/base_attack.gd" id="1_aypx8"]
[ext_resource type="Texture2D" uid="uid://cjsbnw6grvsdj" path="res://graphics/spells/Bubble-001.png" id="1_v1yqq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vwdra"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_40x3c"]
radius = 3.0

[sub_resource type="Animation" id="Animation_1r3gg"]
resource_name = "explode"
length = 0.6
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mldgr"]
_data = {
"explode": SubResource("Animation_1r3gg")
}

[sub_resource type="Gradient" id="Gradient_rt8rp"]
offsets = PackedFloat32Array(0.0106572, 1)
colors = PackedColorArray(0, 0.580392, 0.517647, 1, 0.462745, 0.964706, 0.87451, 1)

[node name="BaseAttack" type="Area2D"]
collision_layer = 16
collision_mask = 232
script = ExtResource("1_aypx8")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture = ExtResource("1_v1yqq")
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vwdra")

[node name="DamageZone" type="Area2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.933333, 0.866667, 0.811765, 1)
collision_layer = 16
collision_mask = 104

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone"]
shape = SubResource("CircleShape2D_40x3c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_mldgr")
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
texture_filter = 1
emitting = false
amount = 100
lifetime = 0.25
one_shot = true
explosiveness = 0.8
randomness = 1.0
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(1, 2.08165e-12)
spread = 180.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 137.82
initial_velocity_max = 147.95
angle_min = -180.0
angle_max = 180.0
color = Color(0.462745, 0.964706, 0.87451, 1)
color_initial_ramp = SubResource("Gradient_rt8rp")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="DamageZone" to="." method="_on_damage_zone_area_entered"]
[connection signal="body_entered" from="DamageZone" to="." method="_on_damage_zone_body_entered"]
